Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Added "baseurl" parameter to the portlet_conformance_statement definition.
- Removed now useless profiles file.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 