@@ -6,6 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- metafactory wasn't able to configure several instances of a
+  single class (namespace collision in form)
 - Added "baseurl" parameter to the portlet_conformance_statement definition.
 - Removed now useless profiles file.
 New internal features
